# Project-2_Simplified-PageRank-Algorithm

./: CMakeLists.txt  README.md
src/: graph.h  main.cpp  test.cpp
src2_Javier-Arango/: pageRank.cpp
